modified lock schedules
correct timing in 2-step-schedule; added multi-step schedule and lock/unlock

--- a/config/scripting.properties
+++ b/config/scripting.properties
@@ -15,9 +15,12 @@ nop=libs.scriptutils.nop
 #plugin modules listed here (without 'plugin' prefix)
 ifte=flow.ifte
 ifundef=flow.ifundef
+lock=flow.lock
+unlock=flow.unlock
 substring=stringutils.substring
 len=stringutils.strlen
 tonum=stringutils.tonum
 tostr=stringutils.tostr
 tonoff=tmutils.schedule_onoff
+mtonoff=tmutils.multi_schedule_onoff
 schedules=tmutils.msched
