Added options QoS and retain for mqttt_publish

--- a/config/scripting.properties
+++ b/config/scripting.properties
@@ -5,6 +5,7 @@
 
 #builtins: don't change!
 mqtt=libs.mqttutils.mqtt_publish
+mqtt_r=libs.mqttutils.mqtt_publish_r
 getdef=libs.heaputils.heap_get_default
 get=libs.heaputils.heap_get
 set=libs.heaputils.heap_set
